--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,15 @@
 .App {
   text-align: center;
-  color: white;
+  color: #4d4d4d;
   background-color: rgb(250, 225, 0);
+  padding: 20px;
+
+  header {
+    margin: 10px 0;
+    text-align: right;
+    line-height: 40px;
+    font-size: 16px;
+    color: rgb(77,77,77);
+    font-weight: 800;
+  }
 }
