--- a/src/pages/SendMessagePage.scss
+++ b/src/pages/SendMessagePage.scss
@@ -1,8 +1,8 @@
 .send-message-page {
+  font-weight: 900;
   .title {
     margin: 120px 0 50px 0;
     font-size: 30px;
-    font-weight: 900;
   }
   input {
     margin-top: 50px;
@@ -13,6 +13,11 @@
   .result {
     margin-top: 200px;
     font-size: 20px;
-    font-weight: 500;
+    img {
+      width: 300px;
+    }
+    .message {
+      margin-top: 20px;
+    }
   }
 }
